@@ -52,4 +52,22 @@ extern void _ltoa(long, char*, unsigned char);
 
 int rand(void);
 void srand(unsigned int seed);
+
+/* Bounds-checking interfaces from annex K of the C11 standard. */
+#if defined (__STDC_WANT_LIB_EXT1__) && __STDC_WANT_LIB_EXT1__
+
+#ifndef __RSIZE_T_DEFINED
+#define __RSIZE_T_DEFINED
+typedef size_t rsize_t;
+#endif
+
+#ifndef __ERRNO_T_DEFINED
+#define __ERRNO_T_DEFINED
+typedef int errno_t;
+#endif
+
+typedef void (*constraint_handler_t)(const char *restrict msg, void *restrict ptr, errno_t error);
+
+#endif
+
 #endif
